[+] Add docker env file

--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     stdin_open: true
     tty: true
     build: .
+    env_file:
+      - .env
     command: 'npm run dev'
     ports:
       - '3000:3000'
